avoid hiding the notifications behind the header in small devices

--- a/src/style/Notifications.scss
+++ b/src/style/Notifications.scss
@@ -10,3 +10,12 @@
     }
 
 }
+
+@media only screen and (max-width: 767px) {
+
+    div.notifications-area {
+        margin-top: 80px;
+        min-height: 48px;
+    }
+
+}
